--- a/start/views/layout.erb
+++ b/start/views/layout.erb
@@ -2,8 +2,16 @@
 <html>
 <head>
   <title>Pizza Shop</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="home">Home</a></li>
+      <li><a href="/pizzas">Pizzas Orders</a></li>
+    </ul>
+  </nav>
   <%= yield %>
+
 </body>
 </html>
