--- a/start/views/index.erb
+++ b/start/views/index.erb
@@ -5,5 +5,14 @@
   <p>PIZZAS!!!... names: <%= pizza.pretty_name() %></p>
   <p>Order: <%=  pizza.quantity() %> x <%= pizza.topping() %></p>
   <p><a href="/pizzas/<%= pizza.id %>">Show Order</a></p>
+
+  <form method="post" action="/pizzas/<%= pizza.id %>/delete" >
+  <input type="submit" value="Delete Order">
+  </form>
+
+  <form method="get" action="/pizzas/<%= pizza.id %>/edit" >
+  <input type="submit" value="Edit">
+  </form>
+
   <hr>
 <% end %>
