--- a/start/views/layout.erb
+++ b/start/views/layout.erb
@@ -7,7 +7,7 @@
 <body>
   <nav>
     <ul>
-      <li><a href="home">Home</a></li>
+      <li><a href="/pizzas/new">New Order</a></li>
       <li><a href="/pizzas">Pizzas Orders</a></li>
     </ul>
   </nav>
