--- a/pizza_shop_end/views/new.erb
+++ b/pizza_shop_end/views/new.erb
@@ -9,6 +9,10 @@
   <select id="pizza-select" name="topping">
     <option value="Margherita">Margherita</option>
     <option value="Meat Tornado">Meat Tornado</option>
+    <option value="Neapolitan">Neapolitan</option>
+    <option value="Chicago">Chicago</option>
+    <option value="Peperoni">Peperoni</option>
+    <option value="Vegetariana">Vegetariana</option>
   </select>
 
   <label for="quantity">Quantity:</label>
